--- a/khoBlog/templates/403.html
+++ b/khoBlog/templates/403.html
@@ -14,7 +14,7 @@
 {% endblock page_top_title %}
 
 {% block content_main %}
-    <a class="btn btn-danger" href="/pages/kheee">Permission Denied</a>
+    <a class="btn btn-danger" href="{% url 'pages:kheee' %}">Permission Denied</a>
 {% endblock content_main %}
 
 {% block pagination %}
