--- a/khoBlog/templates/includes/auth.html
+++ b/khoBlog/templates/includes/auth.html
@@ -13,7 +13,7 @@
             <a class="mb-0 btn btn-primary" href="{% url 'blog:post_draft_list' %}">Drafts</a>
             <a class="mb-0 btn btn-primary" href="{% url 'blog:post_future_list' %}">Future</a>
             <a class="mb-0 btn btn-primary"
-                href="{% url 'blog:post_private_list' %}">Private</a>
+                href="{% url 'blog:post_withdrawn_list' %}">Withdrawn</a>
         </div>
     {% endif %}
 
