--- a/blog/templates/blog/links_list.html
+++ b/blog/templates/blog/links_list.html
@@ -1,5 +1,5 @@
 {% for url in urls %}
     {% if url.featured %}
-        <a class="p-2 text-muted" href="{{ url.get_absolute_url }}">{{ url.featured_title }}</a>
+        <a class="p-2 text-muted" href="{{ url.get_absolute_url }}">{% firstof url.title url.featured_title %}</a>
     {% endif %}
 {% endfor %}
