--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -19,7 +19,7 @@
 
 {% block content_main %}
 
-    {% if post.published_date and not post.private and not post.published_date > now or not post.published_date and user.is_superuser or post.private and user.is_superuser or post.published_date > now and user.is_superuser %}
+    {% if post.published_date and not post.withdrawn and not post.published_date > now or not post.published_date and user.is_superuser or post.withdrawn and user.is_superuser or post.published_date > now and user.is_superuser %}
 
         <div class="card text-white border-secondary bg-dark mb-2">
             <div class="card-header border-secondary">
@@ -43,7 +43,7 @@
 
             <div id="comments" class="card-footer border-secondary">
                 <div class="btn-group-vertical d-flex col-12 col-lg-5 p-0" role="group" aria-label="Comments Group">
-                    <a class="btn btn-primary d-block" href="{% url 'blog:add_comment_to_post' pk=post.pk %}">Add comment</a>
+                    <a class="btn btn-primary d-block" href="{% url 'blog:add_comment_to_post' pk_post=post.pk %}">Add comment</a>
                 </div>
                 {% include 'blog/post_comments_base.html' %}
             </div>
@@ -51,7 +51,7 @@
         </div>
 
     {% else %}
-        <h1><a class="btn btn-danger" href="/pages/kheee">This post is either private or still a draft, you must be logged in
+        <h1><a class="btn btn-danger" href="{% url 'pages:kheee' %}">This post is either withdrawn or still a draft, you must be logged in
             to be able to see it</a></h1>
     {% endif %}
 {% endblock content_main %}
