--- a/khoBlog/templates/404.html
+++ b/khoBlog/templates/404.html
@@ -14,7 +14,7 @@
 {% endblock page_top_title %}
 
 {% block content_main %}
-    <a class="btn btn-danger" href="/pages/kheee">This post doesn't exist</a>
+    <a class="btn btn-danger" href="{% url 'pages:kheee' %}">This page doesn't exist</a>
 {% endblock content_main %}
 
 {% block pagination %}
