--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -223,5 +223,12 @@
 <!-- rel! js -->
 <script src="{% static 'js/scripts/dynamic.js' %}"></script>
 
+<script>
+    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+    return new bootstrap.Tooltip(tooltipTriggerEl)
+    })
+</script>
+
 </body>
 </html>
