--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -68,18 +68,8 @@
     {% endblock page_head %}
 
     <meta name="theme-color" content="#B362FF">
-    <script type="application/json+oembed" title="oEmbed Profile: JSON">
-        {
-            "title": "Khodok's Blog",
-            "url": "https://blog.khodok.xyz",
-            "author_name": "Khodok",
-            "author_url": "https://blog.khodok.xyz/accounts/profile/khodok",
-            "type": "rich"
-        }
-
-    </script>
-    {% comment %} <link rel="alternate" type="application/json+oembed" href="{% static 'js/oembed/oembed.json' %}"
-          title="oEmbed Profile: JSON"> {% endcomment %}
+    <link rel="alternate" type="application/json+oembed" href="{% static 'js/oembed/oembed.json' %}"
+          title="oEmbed Profile: JSON">
 
     <title>
         Khodok's Blog
