--- a/khoBlog/templates/includes/auth.html
+++ b/khoBlog/templates/includes/auth.html
@@ -25,7 +25,10 @@
     {% if user.is_superuser or user.is_staff %}
         <div class="btn-group-vertical d-block" role="group" aria-label="Group Admin">
             <a class="mb-0 btn btn-danger text-white" href="{% url 'admin:index' %}">Admin</a>
-            {% if user.is_superuser %}<a class="mb-0 btn btn-danger text-white" href="https://eu.pythonanywhere.com">Pythonanywhere</a>{% endif %}
+            {% if user.is_superuser %}
+                <a href="/api/v1/" class="btn btn-danger text-white">API V1</a>
+                <a class="mb-0 btn btn-danger text-white" href="https://eu.pythonanywhere.com">Pythonanywhere</a>
+            {% endif %}
         </div>
     {% endif %}
 
