--- a/pages/templates/pages/page_list.html
+++ b/pages/templates/pages/page_list.html
@@ -1,6 +1,10 @@
 {% extends 'pages/base_page.html' %}
 {% load static %}
 
+{% block page_top_title %}
+    <h2>{{ title }}</h2>
+{% endblock page_top_title %}
+
 {% block main %}
     <ol class="list-unstyled mb-0">
         {% for page in pages %}
