--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,12 +1,11 @@
-{% load static %}
+{% extends 'polls/base_polls.html' %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
-{% if latest_question_list %}
-    <ul>
-    {% for question in latest_question_list %}
-        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No polls are available.</p>
-{% endif %}
+{% block main %}
+    <ol class="list-unstyled mb-0">
+        {% for question in latest_question_list %}
+            <li><a href="{% url 'polls:detail' question.id %}">{{ question.id }} - {{ question.question_text }}</a></li>
+        {% empty %}
+            <p>No polls are available.</p>
+        {% endfor %}
+    </ol>
+{% endblock main %}
