--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,9 +1,12 @@
-<h1>{{ question.question_text }}</h1>
+{% extends 'polls/base_polls.html' %}
 
-<ul>
-{% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-{% endfor %}
-</ul>
+{% block main %}
+    <h4>{{ question.question_text }}</h4>
+    <ul>
+        {% for choice in question.choice_set.all %}
+            <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
+        {% endfor %}
+    </ul>
 
-<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+    <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+{% endblock main %}
