moves static files

--- a/khoBlog/static/khoBlog/css/_custom.scss
+++ b/khoBlog/static/khoBlog/css/_custom.scss
@@ -21,3 +21,5 @@ $font-family: $font-family-base;
 }
 
 @import '../vendor/node_modules/bootstrap/scss/bootstrap.scss';
+
+/* Personnalisation des éléments */
