--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -45,8 +45,8 @@
     <link rel="shortlink" href="{{ CANONICAL_PATH }}">
 
     <meta property="og:site_name" content="Hello There !"/>
-    <meta property="og:image" content="{% static 'img/RuthinkkTooBig.png' %}">
-    <meta property="twitter:image" content="{% static 'img/RuthinkkTooBig.png' %}">
+    <meta property="og:image" content="{% static 'khoBlog/img/RuthinkkTooBig.png' %}">
+    <meta property="twitter:image" content="{% static 'khoBlog/img/RuthinkkTooBig.png' %}">
 
     {% block page_head %}
         <!-- Primary Meta Tags -->
@@ -68,7 +68,7 @@
     {% endblock page_head %}
 
     <meta name="theme-color" content="#B362FF">
-    <link rel="alternate" type="application/json+oembed" href="{% static 'js/oembed/oembed.json' %}"
+    <link rel="alternate" type="application/json+oembed" href="{% static 'khoBlog/js/oembed/oembed.json' %}"
           title="oEmbed Profile: JSON">
 
     <title>
@@ -85,14 +85,14 @@
 
     {% block rel %}
         <!-- base! favicon -->
-        <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
+        <link rel="shortcut icon" type="image/png" href="{% static 'khoBlog/img/favicon.ico' %}"/>
 
         <!-- rel! Fonts / Icons -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
 
         <!-- rel! Themes -->
-        <link rel="stylesheet" href="{% static 'css/Themes/highlight.css' %}">
-        <link rel="stylesheet" href="{% static 'css/main.css' %}">
+        <link rel="stylesheet" href="{% static 'khoBlog/css/highlight.css' %}">
+        <link rel="stylesheet" href="{% static 'khoBlog/css/main.css' %}">
     {% endblock rel %}
 
     {% if not debug_flag %}
@@ -122,7 +122,7 @@
                     <p class="blog-header-logo">{% if flatpage.title %}{{ flatpage.title }}{% else %}{{ title }}{% endif %}</p>
                 </div>
                 <div class="col-6 col-sm-4 d-flex justify-content-end align-items-center">
-                    <img id="logo" height="75" src="{% static 'img/RuthinkkTooBig.png' %}" alt="Khodok's Logo"/>
+                    <img id="logo" height="75" src="{% static 'khoBlog/img/RuthinkkTooBig.png' %}" alt="Khodok's Logo"/>
                 </div>
             </div>
         </header>
@@ -220,7 +220,7 @@
                 <a href="{% url 'blog:category_list' %}" class="btn btn-dark btn-outline-light">Category List</a></div>
 
             <div class="col-sm my-2">
-                <a class="linkHome" href="/"><img src="{% static 'img/RuthinkkTooBig.png' %}"
+                <a class="linkHome" href="/"><img src="{% static 'khoBlog/img/RuthinkkTooBig.png' %}"
                                                   width="50" alt="Khodok's Logo"/></a>
             </div>
 
@@ -232,7 +232,7 @@
 </footer>
 
 <!-- rel! js -->
-<script src="{% static 'js/scripts/dynamic.js' %}"></script>
+<script src="{% static 'khoBlog/js/scripts/dynamic.js' %}"></script>
 
 <script>
     var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
